# plexus-substrate

./: .gitignore  Cargo.toml  Makefile  README.md  chaos_test.py
.github/workflows/: ci.yml
.hyperforge/: config.toml
docs/: BIDIRECTIONAL.md  QUICKSTART.md
docs/architecture/: 16668990377026586623_substrate-wire-protocol-and-security-reference.md  16670380887168786687_substrate-technical-debt-audit.md  16672279582406093823-transport-agnostic-activations.md  16672310277095318271-protocol-methods-and-projections.md  16672322758906812927-schema-generation-comparison-hub-methods-vs-activation.md  16672335815491646207-activation-macro-schema-endpoint-bug.md  16672867866129446911_loopback-blocking-approval.md  16673300934239903743_stderr-observability.md  16675729839818305535_why-plexus.md  16676565123000000000_plexus-rpc-terminology-examples.md  16677366925482194687_mobile-client-architecture.md  16677958939404136703_worktree-stack-development.md  16678130375925173503_loopback-mcp-conformance-analysis.md  16678373036159325695_plugin-development-guide.md  16679052837278386687_ir-cli-implementation.md  16679155106803598591_ir-based-cli.md  16679164194740300543_unified-cli-tree.md  16679174944041108735_method-schema-spec.md  16679314737030628607_ir-codegen-chain.md  16679517135570018559_multi-hub-transport-envelope.md  16679574983150601727_arbor-per-method-types-design.md  16679869168467720703_handle-architecture.md  16680006406217676543_schema-intrinsic-hashing.md  16680090161039377663_hub-macro-streaming.md  16680091879496180735_rmcp-mcp-bridge.md  16680179837700061695_caller-wraps-streaming.md  16680205403394519551_mcp-to-arbor-flow.md  16680385605198822655_rmcp-plexus-integration-unknowns.md  16680481063631208703_mcp-extension.md  16680562178783729663_session-improvements.md  16680569353625987583_stdio-transport-implementation.md  16680684630903157503_stream-first-macro.md  16680686512957503487_stream-first-hub.md  16680876922578453503_guidance-implementation-status.md  16680878804024120575_guided-error-middleware-deprecation.md  16680880693241553663_frontend-guidance-migration.md  16680881573410764543_guidance-stream-based-errors.md  16680896323511347711_schema-enrichment-and-cache-invalidation.md  16680907611543113727_schema-required-params.md  16680966217191669503_guided-errors.md  (+5 more)
docs/issues/: orcha-arbor-tracking-status.md
docs/symbols/: 16680975572170886655_help-system.md
examples/: claude_stream_test.rs  rmcp_mcp_server.rs  verify_streaming.rs
logs/: substrate.log.2026-03-22  substrate.log.2026-03-23  substrate.log.2026-04-02  substrate.log.2026-04-03  substrate.log.2026-04-07  substrate.log.2026-04-08  substrate.log.2026-04-09  substrate.log.2026-04-11
plans/: DispatchTdd.cfg  DispatchTdd.tla  DispatchTdd_TTrace_1773533780.tla  MediumBatch.tla  MediumBatch_Buggy.cfg  MediumBatch_Fixed.cfg  MediumBatch_TTrace_1773534895.tla  README.md  SubstrateResilience.tla  SubstrateResilience_AbandonRecovery.cfg  SubstrateResilience_Buggy.cfg  SubstrateResilience_FullRecovery.cfg  SubstrateResilience_TTrace_1773598387.tla  SubstrateResilience_TTrace_1773598694.tla  SubstrateResilience_TTrace_1773598695.tla  SubstrateResilience_TTrace_1773598744.tla  SubstrateResilience_TTrace_1773598746.tla  SubstrateResilience_TTrace_1773598798.tla  dispatch-plan.tickets.md  medium-batch.tickets.md  tdd-node.tickets.md
plans/BIDIR/: BIDIR-GENERIC.md  WS1-ASSESSMENT.md
plans/CHILD/: CHILD-1.md  CHILD-10.md  CHILD-2.md  CHILD-3.md  CHILD-4.md  CHILD-5.md  CHILD-6.md  CHILD-7.md  CHILD-8.md  CHILD-9.md
plans/CLAUDECODE/: ARBOR-EVENTS-1.md  ARBOR-SOURCE-OF-TRUTH.md  LOOPBACK-DEBUG.md  LOOPBACK-FINDINGS.md  STDERR-1.md
plans/CLEANUP/: CLEANUP-1.md  CLEANUP-2.md  CLEANUP-3.md  CLEANUP-4.md  CLEANUP-5.md  CLEANUP-6.md  CLEANUP-7.md
plans/DC/: DC-1.md  DC-2.md  DC-3.md  DC-4.md  DC-5.md  DC-6.md  DC-7.md  DC-S01.md
plans/DEVEX/: DEVEX-1.md
plans/DISPATCH/: DISPATCH-1.md
plans/ERRORS/: ERRORS-1.md
plans/HASH/: HASH-1.md
plans/HF/: HF-0.md  HF-1.md  HF-CLEAN.md  HF-DEBUG.md  HF-LINT-SWEEP.md  HF-TESTS.md
plans/HF-AUDIT/: HF-AUDIT-1.md  HF-AUDIT-2.md  HF-AUDIT-3.md  HF-AUDIT-4.md
plans/HF-PUBLISH/: HF-PUBLISH-1.md  HF-PUBLISH-2.md  HF-PUBLISH-3.md  HF-PUBLISH-4.md  HF-PUBLISH-5.md  HF-PUBLISH-6.md  HF-PUBLISH-S01.md
plans/IR/: IR-1.md  IR-10.md  IR-11.md  IR-12.md  IR-13.md  IR-14.md  IR-15.md  IR-16.md  IR-17.md  IR-18.md  IR-19.md  IR-2.md  IR-20.md  IR-21.md  IR-3.md  IR-4.md  IR-5.md  IR-6.md  IR-7.md  IR-8.md  IR-9.md  IR-S01.md  IR-S02.md  IR-S03.md
plans/LAMBDA/: LAMBDA-1.md  LAMBDA-10.md  LAMBDA-11.md  LAMBDA-2.md  LAMBDA-3.md  LAMBDA-4.md  LAMBDA-5.md  LAMBDA-6.md  LAMBDA-7.md  LAMBDA-8.md  LAMBDA-9.md  LAMBDA-S01.md
plans/LIVE-GRAPH/: LIVE-GRAPH-1.md
plans/MCP/: MCP-10.md  MCP-11.md  MCP-12.md  MCP-2.md  MCP-3.md  MCP-4.md  MCP-5.md  MCP-6.md  MCP-7.md  MCP-8.md  MCP-9.md
plans/OB/: OB-1.md  OB-2.md  OB-3.md  OB-4.md  OB-5.md  OB-6.md  OB-S01.md
plans/ORCHA/: ORCHA-1.md  ORCHA-2.md
plans/PROT/: PROT-1.md  PROT-10.md  PROT-2.md  PROT-3.md  PROT-4.md  PROT-5.md  PROT-6.md  PROT-7.md  PROT-8.md  PROT-9.md  PROT-S01.md  PROT-S02.md  PROT-S03.md  PROT-S04.md
plans/RL/: RL-1.md  RL-10.md  RL-2.md  RL-3.md  RL-4.md  RL-5.md  RL-6.md  RL-7.md  RL-8.md  RL-9.md  RL-S01.md
plans/RUNPLAN/: RUNPLAN-1.md
plans/RUSTGEN/: RUSTGEN-1.md  RUSTGEN-2.md  RUSTGEN-3.md  RUSTGEN-4.md  RUSTGEN-5.md  RUSTGEN-6.md  RUSTGEN-7.md  RUSTGEN-8.md  RUSTGEN-9.md  RUSTGEN-S01.md  RUSTGEN-S02.md
plans/ST/: ST-1.md  ST-10.md  ST-2.md  ST-3.md  ST-4.md  ST-5.md  ST-6.md  ST-7.md  ST-8.md  ST-9.md
plans/STG/: STG-1.md  STG-10.md  STG-2.md  STG-3.md  STG-4.md  STG-5.md  STG-6.md  STG-7.md  STG-8.md  STG-9.md  STG-S01.md  STG-S02.md
plans/STREAM-UX/: STREAM-UX.md
plans/SYN/: SYN-1.md  SYN-2.md  SYN-3.md
plans/TDD/: TDD-1.md
plans/TM/: TM-1.md  TM-2.md  TM-3.md  TM-4.md  (+7 more)
src/: builder.rs  lib.rs  main.rs  mcp_bridge.rs  mcp_session.rs  types.rs
tests/: bidirectional_integration.rs  macro_plugin_test.rs  rpc_integration.rs  test_session_roundtrip.rs  test_view_collapse.rs
(+144 files in other folders)
